// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure Figure component 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Figure"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="non-editable-chunk obojobo-draft--chunks--figure viewer custom"
    contentEditable={false}
    data-indent={0}
  >
    <div
      className="container"
    >
      <figure
        unselectable="on"
      >
        <img
          alt="Alt Text"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="www.example.com/img.jpg"
          style={
            Object {
              "height": "400px",
              "width": "500px",
            }
          }
          unselectable="on"
        />
        <figcaption
          className="is-caption-width-image-width"
          style={
            Object {
              "width": "500px",
            }
          }
        >
          <span
            className="obo-text"
            data-group-index="0"
          >
            <span>
              <span>
                <span>
                  Example Text
                </span>
              </span>
            </span>
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
</div>
`;

exports[`Figure Figure component custom size with no height 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Figure"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="non-editable-chunk obojobo-draft--chunks--figure viewer custom"
    contentEditable={false}
    data-indent={0}
  >
    <div
      className="container"
    >
      <figure
        unselectable="on"
      >
        <img
          alt="Alt Text"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="www.example.com/img.jpg"
          style={
            Object {
              "width": "500px",
            }
          }
          unselectable="on"
        />
        <figcaption
          className="is-caption-width-max-width"
          style={Object {}}
        >
          <span
            className="obo-text"
            data-group-index="0"
          >
            <span>
              <span>
                <span>
                  Example Text
                </span>
              </span>
            </span>
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
</div>
`;

exports[`Figure Figure component custom size with no width 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Figure"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="non-editable-chunk obojobo-draft--chunks--figure viewer custom"
    contentEditable={false}
    data-indent={0}
  >
    <div
      className="container"
    >
      <figure
        unselectable="on"
      >
        <img
          alt="Alt Text"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="www.example.com/img.jpg"
          style={
            Object {
              "height": "400px",
            }
          }
          unselectable="on"
        />
        <figcaption
          className="is-caption-width-image-width"
          style={Object {}}
        >
          <span
            className="obo-text"
            data-group-index="0"
          >
            <span>
              <span>
                <span>
                  Example Text
                </span>
              </span>
            </span>
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
</div>
`;

exports[`Figure Figure component size small 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Figure"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="non-editable-chunk obojobo-draft--chunks--figure viewer small"
    contentEditable={false}
    data-indent={0}
  >
    <div
      className="container"
    >
      <figure
        unselectable="on"
      >
        <img
          alt="Alt Text"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="www.example.com/img.jpg"
          style={Object {}}
          unselectable="on"
        />
        <figcaption
          className="is-caption-width-image-width"
          style={Object {}}
        >
          <span
            className="obo-text"
            data-group-index="0"
          >
            <span>
              <span>
                <span>
                  Example Text
                </span>
              </span>
            </span>
          </span>
        </figcaption>
      </figure>
    </div>
  </div>
</div>
`;

exports[`Figure Figure component with no textGroup 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Figure"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="non-editable-chunk obojobo-draft--chunks--figure viewer custom"
    contentEditable={false}
    data-indent={0}
  >
    <div
      className="container"
    >
      <figure
        unselectable="on"
      >
        <img
          alt="Alt Text"
          className="obojobo-draft--chunks--figure--image is-valid is-not-loaded"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="www.example.com/img.jpg"
          style={
            Object {
              "height": "400px",
              "width": "500px",
            }
          }
          unselectable="on"
        />
      </figure>
    </div>
  </div>
</div>
`;
